# rag-rerank

./: .env.example  .gitignore  CHANGELOG.md  README.md  TODO.md  check_index.py  env.example  mise.toml  pyproject.toml  requirements.txt  setup.ps1  setup.sh  test_theme_tagging.py
app/: config.py  main.py  models.py
app/api/: routes.py
app/core/: __init__.py  exceptions.py  logging.py  settings.py
app/models/: __init__.py  api.py  domain.py
app/services/: embedding.py  llm.py  rag.py  rerankers.py  text_processing.py  theme_tagging.py
app/utils/: diagnostic.py
doc/: adventures_of_sherlock_holmes.md  cross-encoder.md  file-upload-feature.md  markdown-rendering.md  python-uv.md  python.md  rag-questions.md  rag.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: ragApi.js
frontend/src/components/: DocumentIngest.jsx  DocumentIngest.test.jsx  QueryInterface.jsx
frontend/src/stores/: ragStore.js
scripts/: evaluate_sherlock.py  sanity_check.py
tests/: conftest.py  test_health.py
